--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
+asgiref==3.6.0
 boto3==1.26.115
 botocore==1.29.115
+Django==4.2
+image==1.5.33
 jmespath==1.0.1
-python-dateutil==2.8.2
-s3transfer==0.6.0
-six==1.16.0
-urllib3==1.26.15
-boto3==1.26.115
-botocore==1.29.115
-jmespath==1.0.1
-python-dateutil==2.8.2
-s3transfer==0.6.0
-six==1.16.0
-urllib3==1.26.15
-boto3==1.26.115
-botocore==1.29.115
-jmespath==1.0.1
+Pillow==9.5.0
 pygame==2.3.0
 python-dateutil==2.8.2
 s3transfer==0.6.0
 six==1.16.0
+sqlparse==0.4.4
 urllib3==1.26.15
